pom profile improvements